--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.addressables": "2.2.2",
     "com.unity.ai.navigation": "2.0.7",
     "com.unity.behavior": "1.0.9",
     "com.unity.cinemachine": "3.1.3",
